# monorepo-template

./: .cursorrules  .eslintrc.js  .flake8  .gitignore  .lintstagedrc.js  .prettierignore  .pylintrc  LICENSE  README.md  package.json  prettier.config.mjs  pyproject.toml  tsconfig.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  zshrc
.github/workflows/: build.yml  deploy.yml
.husky/: pre-commit
scripts/: clean.py  lint.py  postinstall.py  update_version.py
services/server/: pyproject.toml
services/ui/: .eslintrc.js  package.json  tsconfig.json
services/ui/src/app/: layout.tsx  page.tsx
