[tool.poetry]
package-mode = false
name = "todo-your-name"
version = "0.1.0"
description = "TODO: Your Description"
authors = ["TODO Your Name <email@domain.tld>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
types-requests = "^2.32.0.20241016"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.2"
pylint = "^3.3.3"
black = "^25.1.0"
pyinstaller = "^6.12.0"

[tool.black]
line-length = 120
exclude = '''
/(
    build
  | dist
  | node_modules
  | .next
  | __pycache__
  | .mypy_cache
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"